refactor: 코드리뷰 반영
- User.guardNickname: isBlank()로 null/empty/blank 검사 단순화
- JwtProvider: Date → Instant로 토큰 만료 시간 계산 개선
- UserService: @Value 필드 주입 → 생성자 주입으로 변경

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>